--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -2,14 +2,16 @@ version: "3.7"
 services:
   api:
     working_dir: /usr/src/app
-    image: node:18-alpine
+    image: node:18
     volumes:
       - .:/usr/src/app
-    command: ["npm" , "start"]
+    command: >
+     bash -c "
+      npm i && npm start "
     env_file:
      - .env
     ports:
-      - 3000:3000
+      - 3001:3000
     depends_on:
       - db
     external_links:
